--- a/checker/Makefile
+++ b/checker/Makefile
@@ -6,7 +6,7 @@
 #    By: oevtushe <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/03/08 08:03:18 by oevtushe          #+#    #+#              #
-#    Updated: 2018/03/14 12:55:54 by oevtushe         ###   ########.fr        #
+#    Updated: 2018/03/15 11:07:21 by oevtushe         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,8 +37,7 @@ SRCF			:= checker.c \
 				op_print.c \
 				st_issorted.c \
 				rebase_op_stack.c \
-				checker_error.c \
-				ft_isnumber.c 
+				checker_error.c
 
 SRCS			:= $(addprefix $(SRCS_DIR)/,$(SRCF))
 DEPS			:= $(addprefix $(DEPS_DIR)/,$(DEPF))
