Add debug key '-d'
Now you can enter the command and see what it does
in the same time.

--- a/checker/Makefile
+++ b/checker/Makefile
@@ -6,7 +6,7 @@
 #    By: oevtushe <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/03/08 08:03:18 by oevtushe          #+#    #+#              #
-#    Updated: 2018/05/01 12:06:28 by oevtushe         ###   ########.fr        #
+#    Updated: 2018/05/02 10:55:51 by oevtushe         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,6 +28,9 @@ SRCF			:= checker.c \
 				new_opc.c \
 				op_executor.c \
 				new_pformat.c \
+				init_format.c \
+				op_read_and_exec.c \
+				verdict.c \
 				read_operations.c \
 				str_join_number.c \
 				print_info.c \
